--- a/cudatest1/cudatest1.vcxproj
+++ b/cudatest1/cudatest1.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <CudaCompile Include="addNum.cu" />
+    <CudaCompile Include="addArray.cu" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
